--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_main.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="369dp"
-        android:layout_height="347dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="354dp"
+        android:layout_height="275dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
@@ -30,18 +30,17 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="362dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="349dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/textView25"
-            android:layout_width="274dp"
+            android:layout_width="263dp"
             android:layout_height="wrap_content"
             android:text="HISTORIAL"
             android:textStyle="bold" />
@@ -59,16 +58,17 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="373dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="354dp"
+        android:layout_height="63dp"
+        android:layout_marginBottom="32dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:layout_width="272dp"
+            android:layout_width="251dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -111,17 +111,20 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="369dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="354dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.967">
 
         <LinearLayout
-            android:layout_width="271dp"
-            android:layout_height="62dp"
+            android:layout_width="252dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -155,7 +158,7 @@
 
         <ImageButton
             android:id="@+id/btnEliminarMedicamento"
-            android:layout_width="37dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12sp"
             android:layout_marginTop="18sp"
