--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_registro.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_registro.xml
@@ -72,15 +72,13 @@
         android:id="@+id/btnGuardarNuevoUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="16dp"
         android:text="Guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
         android:id="@+id/txtDNINuevo"
