--- a/CODIGO/AsistenteIngesta/app/src/main/res/layout/activity_login.xml
+++ b/CODIGO/AsistenteIngesta/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:inputType="text"
-        android:text="LOGO"
+        android:text="LOGIN"
         android:textSize="24sp"
         app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintLeft_toLeftOf="parent"
